karnc/tests/fixtures/negative/122_service_missing_from/src/svc.karn
context svc

service api {
  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
